# Wizz_mania_server

./: CMakeLists.txt  Server.cpp  Server.h  main.cpp  testThread.cpp
certs/: server_cert.pem  server_csr.pem  server_key.pem
